<resources>

    <string name="app_name">RUBILNIK</string>
    <string name="app_name1">RUBIL</string>
    <string name="app_name2">NIK</string>
    <string name="welcome">WELCOME</string>
    <string name="nick">NICK</string>
    <string name="settings">SETTINGS</string>
    <string name="sound">SOUND</string>
    <string name="profile_pic">PROFILE PICTURE</string>
    <string name="session">SESSION</string>
    <string name="connect">CONNECT</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="enter_key">ENTER KEY</string>
    <string name="username">USERNAME</string>
    <string name="profile">PROFILE</string>
    <string name="theme">DARK THEME</string>
    <string name="feedback">FEEDBACK</string>
    <string name="question">QUESTION\u00A0</string>

    <string name="numQuestion">1</string>
    <string name="textQuestion">HOW ARE YOU?</string>
    <string name="ratingPos">POSITION</string>
    <string name="txtRatingPosInfo">1</string>
<!--    <string name="txtRightAnswers">RIGHT ANSWERS</string>-->
    <string name="txtRightAnswers">POINTS</string>
    <string name="txtRightAnswersInfo">1</string>
    <string name="btnReturn">RETURN</string>
    <string name="result">RESULT</string>
    <string name="download">DOWNLOAD</string>
    <string name="room">Room</string>

    <!--Alerts-->
    <string name="bark">Bark</string>
    <string name="roomJoined">room joined</string>
    <string name="joined">joined</string>
    <string name="leftTheRoom">left the room</string>
    <string name="quizStarted">quiz started</string>
    <string name="socketConnected">socket connected</string>
    <string name="failedToConnectSocket">failed to establish socket connection</string>
    <string name="roomDoesntExist">room doesn\'t exist</string>
    <string name="waiting_for_the_host">waiting for the host…</string>

    <string name="exit_flag">Are you sure you want to leave the quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string-array name="choiceName">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
</resources>