<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SettingsFragment"
    android:orientation="vertical"
    android:background="@android:color/transparent">

        <TextView
            android:id="@+id/txtSettings"
            android:text="@string/settings"
            style="@style/textMainRub"/>

        <TextView
            android:id="@+id/txtMusic"
            android:text="@string/music"
            style="@style/textMainAll"/>

        <Switch
            android:id="@+id/swMusic"
            style="@style/swOnOff"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/txtSound"
            android:text="@string/sound"
            style="@style/textMainAll"/>

        <Switch
            android:id="@+id/swSound"
            style="@style/swOnOff"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFeedback"
            style="@style/btn"
            android:text="@string/feedback"
            android:layout_marginTop="72dp" />

</LinearLayout>