<?xml version="1.0" encoding="utf-8"?>
<!-- custom_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_rectangle">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/textRegular"
            android:text="@string/exit_flag"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dlg_cancel"
                style="@style/btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:gravity="center"
                android:layout_marginStart="0dp"
                android:layout_margin="16dp"/>
            <Button
                android:id="@+id/btn_dlg_ok"
                style="@style/btn"
                android:layout_width="100dp"
                android:text="@string/yes"
                android:gravity="center"
                android:layout_marginStart="0dp"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>